--- a/ui/src/main/frontend/src/scss/editor.scss
+++ b/ui/src/main/frontend/src/scss/editor.scss
@@ -45,7 +45,7 @@
 	}
 	.page-wrapper-frame {
 		position: fixed;
-		top: 45px;
+		top: 44px;
 		left: 0px;
 		bottom: 0px;
 		right: 0px;
